[project]
name = "planner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "fastapi==0.136.0",
    "langchain-core==1.3.2",
    "langchain-openrouter==0.2.1",
    "langgraph==1.1.9",
    "loguru==0.7.3",
    "psycopg2-binary==2.9.12",
    "pydantic[email]==2.13.1",
    "pydantic-settings==2.13.1",
    "pyjwt>=2.12.1",
    "python-jose>=3.5.0",
    "redis==7.4.0",
    "sqlalchemy==2.0.49",
    "uvicorn==0.45.0",
    "langchain-community>=0.4.1",
    "bs4>=0.0.2",
]
